<resources>
    <string name="app_name">Swivel</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="headline_news_title">Headline</string>
    <string name="custom_news_title">Custom</string>
    <string name="profile_title">Profile</string>

    <string name="news_author">Author</string>
    <string name="news_title">Title</string>
    <string name="news_content">Content</string>
    <string name="news_published_date">Published Date</string>

    <string name="select_preferences">Select your preferences</string>
    <string name="more_button_title">More</string>


    <string name="user_name">Username</string>
    <string name="user_email">Email</string>
    <string name="register_btn_title">Register</string>

    <string name="btn_action_title">Update</string>


    <string name="user_add_messages_name_empty">Username can not be empty</string>
    <string name="user_add_messages_email_empty">Email address can not be empty</string>
    <string name="user_add_messages_email_invalid">Email address invalid</string>
    <string name="user_select_messages_preferences_empty">Please select preferences</string>


    <string name="user_save_successfully">User save successfully</string>

    <string-array name="user_pref_list">
        <item>bitcoin</item>
        <item>apple</item>
        <item>earthquake</item>
        <item>animal</item>
    </string-array>
</resources>
