<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"></import>

        <variable
            name="profile"
            type="com.himanshu.project.myapplication.viewmodels.ProfileViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/toolbar_elevation"
            android:layout_marginLeft="@dimen/toolbar_elevation"
            android:layout_marginTop="@dimen/appbar_padding"
            android:layout_marginEnd="@dimen/toolbar_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/appbar_padding_top"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textColor="@color/colorTxt" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/appbar_padding_top"
                        android:layout_marginLeft="@dimen/appbar_padding_top"
                        android:inputType="text"
                        android:text="@={profile.editTextUserName}"
                        android:textColor="@color/colorTxt" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/appbar_padding_top"
                    android:layout_marginTop="@dimen/appbar_padding_top"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_email"
                        android:textColor="@color/colorTxt" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/appbar_padding_top"
                        android:layout_marginLeft="@dimen/appbar_padding_top"
                        android:inputType="text"
                        android:text="@={profile.editTextEmail}"
                        android:textColor="@color/colorTxt" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/appbar_padding_top"
                    android:layout_marginTop="@dimen/appbar_padding_top"
                    android:layout_marginBottom="@dimen/appbar_padding_top"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView_tool_borrowed_count_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_preferences"
                        android:textColor="@color/colorTxt" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_layout_hight"
                        android:layout_marginStart="@dimen/appbar_padding_top"
                        android:layout_marginLeft="@dimen/appbar_padding_top"
                        android:layout_marginTop="@dimen/appbar_padding_top"
                        android:layout_marginEnd="@dimen/appbar_padding_top"
                        android:onItemSelected="@{profile.onSelectUserPreferences}"
                        android:entries="@array/user_pref_list"
                        android:spinnerMode="dropdown" />

                    <Button
                        android:id="@+id/button_more"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginEnd="@dimen/appbar_padding_top"
                        android:layout_gravity="end"
                        android:text="@string/more_button_title"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/colorWhite"
                        android:layout_marginRight="@dimen/appbar_padding_top" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>